--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-multi-carousel": "^2.8.5",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
     "react-tabs": "^6.0.2",
