--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
+    "react-share": "^5.1.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
