--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-awesome-button": "^7.0.5",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-grid-gallery": "^1.0.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.5",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
