--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.5",
     "react-player": "^2.16.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.23.1",
     "react-share": "^5.1.0",
     "react-tabs": "^6.0.2",
