--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-player": "^2.16.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0",
     "react-share": "^5.1.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
