--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
     "@smastrom/react-rating": "^1.5.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
@@ -18,6 +20,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-awesome-button": "^7.0.5",
+    "react-confetti": "^6.1.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-grid-gallery": "^1.0.1",
@@ -29,11 +32,13 @@
     "react-multi-carousel": "^2.8.5",
     "react-player": "^2.16.0",
     "react-rating": "^2.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
     "react-share": "^5.1.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
+    "react-use": "^17.5.0",
     "react-youtube": "^10.1.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.11.0",
