--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@smastrom/react-rating": "^1.5.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
+    "framer-motion": "^11.2.10",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
